tests/samples/compile_errors/redim_target/undefined.bas
Attribute VB_Name = "RedimUndefined"
Sub TestRedim()
    ReDim notDeclared(1 To 10)
End Sub
